Fixed Flex-wrap

--- a/css/master.css
+++ b/css/master.css
@@ -26,6 +26,7 @@ body{
   border-bottom: 2px solid #003151;
   margin: 0;
   padding: 0;
+  flex-wrap: wrap;
 }
 
 .Menu_Option{
